content/static: fix site header UX
The z-index of the mobile navigation drawer for the
header are increased to ensure they appear above the
unit page header. Tab index is overriden so navigation
elements offscreen do not get keyboard focus.

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/325853
Trust: Jamal Carvalho <jamal@golang.org>
Run-TryBot: Jamal Carvalho <jamal@golang.org>

--- a/content/static/_header/header.css
+++ b/content/static/_header/header.css
@@ -250,7 +250,7 @@
   transform: translateX(100%);
   transition: transform 100ms ease-in-out;
   width: 85%;
-  z-index: 20;
+  z-index: 30;
 }
 .go-NavigationDrawer.is-active {
   transform: translateX(0);
@@ -286,7 +286,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 5;
+  z-index: 20;
 }
 .go-NavigationDrawer.is-active + .go-NavigationDrawer-scrim {
   background-color: var(--gray-1);
